# VPMDK

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  vp_modoki.py  vpmdk.py
.github/workflows/: draft-pdf.yml  publish-pypi.yml  tests.yml
docs/: README.md  api.md
docs/development/: architecture.md  backend-environments.md  force-constants.md  validation.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api-reference.md  backends.md  bcar-tags.md  incar-tags.md
docs/user-guide/: charge-density.md  cli-workflows.md  python-api.md
examples/: README.md
examples/api_chgnet/: README.md  list_backends.py  relax.py  single_point.py
examples/api_chgnet/reference/: relaxed.vasp
examples/bader_chgcar_charge3net/: BCAR  POSCAR  README.md  run.sh
examples/bader_chgcar_charge3net/reference/: CHGCAR  CONTCAR  OSZICAR  OUTCAR  README.md  vasprun.xml
examples/chgcar_charge3net/: .gitignore  BCAR  INCAR  README.md  predict_api.py  run.sh
examples/chgcar_charge3net/reference/: CHGCAR  CONTCAR  OUTCAR  vasprun.xml
examples/md_mace/: BCAR  INCAR  POSCAR  run.sh
examples/md_mace/reference/: CONTCAR  OSZICAR  OUTCAR  XDATCAR  vasprun.xml
examples/neb_nequip_vtst/: BCAR  INCAR  run.sh
examples/neb_nequip_vtst/00/: POSCAR
examples/neb_nequip_vtst/01/: POSCAR
examples/neb_nequip_vtst/02/: POSCAR
examples/neb_nequip_vtst/reference/: OSZICAR  OUTCAR  mep.eps  movie  movie.vasp  vasprun.xml
examples/phonopy_dfpt_force_constants/: BCAR  INCAR  POSCAR  README.md  run.sh
examples/phonopy_displacement_force_sets/: BCAR  POSCAR  README.md  run.sh
examples/phonopy_residual_force_subtraction/: BCAR  INCAR  POSCAR  README.md  run.sh
examples/phonopy_supercell_dfpt_force_constants/: BCAR  INCAR  POSCAR  README.md  run.sh
examples/phonopy_vasp_finite_difference/: BCAR  INCAR  POSCAR  README.md  run.sh
examples/relax_chgnet/: BCAR  INCAR  POSCAR  run.sh
examples/relax_chgnet/reference/: OSZICAR  OUTCAR  vasprun.xml
examples/uspex_9_4_4_si/: INPUT.txt  README.md
notes/: fairchem_v1_env_setup.md  forcefield_env_notes.md  md_cuda_validation_report.md
paper/: joss_policy_review_memo_2026-02-15.md  paper.bib  paper.md
src/: vpmdk.py
src/vpmdk_core/: __init__.py  api.py  backend_common.py  charge3net_runner.py  charge_density.py  cli.py  deepcdp_runner.py  deepdft_runner.py  execution.py  models.py  observers.py
tests/: BCAR  INCAR  POSCAR  __init__.py  conftest.py  test_api.py  test_backends.py  test_charge_density.py  test_main.py  test_md.py  test_parsing.py  test_relaxation.py  test_vp_modoki.py  test_vpmdk.py  test_xdatcar.py
tests/integration/: test_integration_md.py
(+47 files in other folders)
