[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpmdk"
version = "0.1.0"
description = "Run machine-learning potentials using VASP style inputs."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = ["vasp", "molecular-dynamics", "machine-learning", "ase"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "ase",
  "numpy",
  "pymatgen",
]

[project.scripts]
vpmdk = "vpmdk:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["vpmdk_core"]
py-modules = ["vpmdk"]
